--- a/exercises/js/ex_69.md
+++ b/exercises/js/ex_69.md
@@ -2,4 +2,5 @@
 
 * Create a new index69.js file
 * Use while structure to sum numbers between 0 and 1000
+* Use a variable to store the sum of all numbers
 * Show the partial result as output too
